# openfx-runner

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: basic.rs  no_getplugin.rs  null_plugin.rs
src/: commands.rs  constants.rs  handles.rs  main.rs  params.c  strings.rs  suite_impls.rs  suites.rs  types.rs  variadic_functions.c
src/snapshots/: openfx_runner__test__render_alpha.snap  openfx_runner__test__render_basic.snap  openfx_runner__test__render_layout.snap  openfx_runner__test__render_mask.snap  openfx_runner__test__render_rowbytes.snap  openfx_runner__test__render_use_rod.snap  openfx_runner__test__render_use_roi.snap
test/: Makefile  alpha-bars.exr  circle.exr  colorbars.exr  no-exe-name.plist  no-functions  no-getplugin  not-a-dict.plist  not-a-string.plist  plugin.c
test/NoExe.ofx.bundle/Contents/: Info.plist
test/Unparseable.ofx.bundle/Contents/: Info.plist
