[package]
name = "openfx-runner"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
exr = "1.71.0"
libc = "0.2.144"
libloading = "0.7.4"
plist = "1.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
openfx-rs = {version = "0.1.0", features = ["derive_serde"] }
openfx-sys = "0.1.0"

[build-dependencies]
cc = "1.0"
