[package]
name = "openfx-runner"
version = "0.1.0"
edition = "2024"


[[example]]
name = "no_functions"
path = "examples/no_functions.rs"
crate-type = ["cdylib"]

[[example]]
name = "no_getplugin"
path = "examples/no_getplugin.rs"
crate-type = ["cdylib"]

[[example]]
name = "null_plugin"
path = "examples/null_plugin.rs"
crate-type = ["cdylib"]

[[example]]
name = "basic"
path = "examples/basic.rs"
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
exr = "1.71.0"
libc = "0.2.144"
libloading = "0.7.4"
plist = "1.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
openfx-rs = {version = "0.1.0", features = ["derive_serde"] }
openfx-sys = "0.1.0"
anyhow = "1.0.99"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
insta = "1.47.2"
